                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-08-2004 changed: italian language file (tny to kotix)
  - 15-08-2004 fixed: sf [1009706] album info sometimes doesn't get download (tnx to equinox102)
  - 15-08-2004 fixed: crash in X community when navigating
  - 15-08-2004 fixed: album info broken, allmusic changed site again
  - 15-08-2004 added: G: drive freespace in system info
  - 15-08-2004 added: Last loaded profile label in profile screen
  - 15-08-2004 fixed: Mouse is set to inactive on startup (default focused button should work correctly now)
  - 15-08-2004 changed: Video zoom options increased.
  - 14-08-2004 fixed: Bookmark buttons would disappear when re-entering My Programs
  - 13-08-2004 fixed: Fixed stupid comparison operators in Settings->My Programs
  - 13-08-2004 fixed: crash inbetween songs when using Xaraoke vis
  - 13-08-2004 fixed: subtitles were resizing when zooming/stretching the video
  - 13-08-2004 fixed: VP4/5/6 dlls should work again
  - 13-08-2004 changed: Scan and Shortcuts are no longer in My Programs by default.  The option to re-enable is in Settings->My Programs.
  - 13-08-2004 added: [ 986344 ] CDG (Karaoke) support patch for MP3
  - 12-08-2004 changed: My Programs database layout changed again.  Changed database name so no need to remove existing database first
  - 12-08-2004 added: My Programs path tag can now contain direct link to XBE (Ex: <path>E:\apps\,C:\retailxboxdash.xbe</path>
  - 12-08-2004 fixed: Default tag in My Programs no longer needs to be the same as the path tag for the bookmark
  - 12-08-2004 fixed: Improved My Programs speed in displaying bookmarks and cleaned up some code